Fixed project images being cut off

--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,8 @@ ul li {
     -moz-transition: all, 0.5s;
     -o-transition: all, 0.5s;
     -webkit-transition: all, 0.5s;
-    transition: all, 0.5s; }
+    transition: all, 0.5s;
+    width: 100%; }
   .work h5, .work p {
     color: #fff;
     margin: 0;
